force-app/main/default/objects/YS_Event__e/YS_Event__e.object-meta.xml
<CustomObject>
    <description>Event created by the YS &lt;&gt; Sf integration</description>
    <label>YS Event</label>
    <pluralLabel>YS Events</pluralLabel>
</CustomObject>