force-app/main/default/objects/YS_Event__e/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <description>Datetime of the event</description>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>