force-app/main/default/objects/YS_Event__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Record linked to the event</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>