force-app/main/default/objects/YS_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the Event. Current used value is &quot;Quote Signed&quot;</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>